# python-ci

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
backend/: application.py  wsgi.py
tests/: conftest.py  test_app.py
