[tool.poetry]
authors = ["Anonymous <you@example.com>"]
description = "Test d'un Pipeline CI"
name = "CI Python"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = ">=2.0.1"
pydantic = ">=1.8.2"
python = "3.10.6"
flask-jeroboam = "^0.0.1a0"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
flake8 = ">=4.0.1"
isort = "^5.10.1"
mypy = ">=0.941"
pre-commit = "^2.20.0"
pycln = "^2.1.1"
pytest = ">=7.1.0"
pyupgrade = "^2.37.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
lines_after_imports = 2
profile = "black"
