[tool.poetry]
authors = ["Anonymous <you@example.com>"]
description = "Test d'un Pipeline CI"
name = "CI Python"
version = "0.1.0"

[tool.poetry.dependencies]
APScheduler = ">=3.6"
Flask = ">=2.0.1"
Flask-Cors = ">=3.0"
Flask-HTTPAuth = ">=4.4.0"
Flask-JWT-Extended = ">=4.2"
Flask-Login = ">=0.5.0"
Flask-SQLAlchemy = ">=2.4.1"
Flask-Script = ">=2.0"
Flask-WTF = ">=0.14.2"
SQLAlchemy = ">=1.4.1"
WTForms = {extras = ["email"], version = ">=3.0.1"}
WTForms-Alchemy = ">=0.17"
boto3 = ">=1.17"
chardet = ">=3.0.4"
dateparser = ">=1.1.0"
elasticsearch = "<7.14.0"
elasticsearch-dsl = ">=7.0.0"
email-validator = "^1.1.3"
google-api-python-client = ">=2.9.0"
google-auth-oauthlib = ">=0.4.2"
gunicorn = ">=20.0.4"
hubspot-api-client = ">=4.0.6"
humanize = ">=3.11"
is-safe-url = ">=1.0"
logzero = ">=1.7.0"
numpy = ">=1.18.5"
openpyxl = ">=3.0.4"
pandas = ">=1.4"
pydantic = ">=1.8.2"
python = ">=3.8.10,<4"
python-slugify = ">=5.0.2"
requests = ">=2.23.0"
requests-aws4auth = ">=1.1.1"
sshtunnel = ">=0.4.0"
toml = ">=0.10.1"
xlrd = ">=1.2.0"
#camelot-py = {extras = ["cv"], version = ">=0.10.1"}
#scikit-learn = "0.24.1"
nltk = ">=3.5"
unidecode = ">=1.2.0"
#Levenshtein = "0.12.0"
XlsxWriter = ">=1.2"
alembic = ">=1.8.0"
attrs = ">=21.4.0"
black = {extras = ["d"], version = "^22.8.0"}
inflection = ">=0.5.1"
psycopg2-binary = ">=2.9.3"
python-dotenv = ">=0.19.2"
setuptools = ">=65.3.0"
structlog = ">=21.5.0"

[tool.poetry.dev-dependencies]
black = ">=22.1.0"
flake8 = ">=4.0.1"
isort = ">=5.10.1"
mypy = ">=0.941"
pre-commit = ">=2.20.0"
pycln = ">=2.1.1"
pytest = ">=7.1.0"
pyupgrade = ">=2.37.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
lines_after_imports = 2
profile = "black"
